# Timeseries-MCP

./: .env.example  .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: static_check.yaml
src/time_mcp/: server.py
src/time_mcp/data_provider/: data_factory.py  data_loader.py
src/time_mcp/models/: NLinear.py
src/time_mcp/utils/: loss.py  scheduler.py  timefeatures.py
